Bug 1984029 - Small cleanup and fixes for gecko-trace component r=jari
This patch fixes some issues with the code generator when generating
include guards that are non-unique.

It also cleans up wording an inconsitencies in code/doc comments.

Differential Revision: https://phabricator.services.mozilla.com/D266307

UltraBlame original commit: 6a4c4677025eb79debb1d62a2fdb3572672fd0dc

--- a/toolkit/components/gecko-trace/scripts/templates/GeckoTraceEvents.h.jinja2
+++ b/toolkit/components/gecko-trace/scripts/templates/GeckoTraceEvents.h.jinja2
@@ -90,10 +90,22 @@ MPL
 /
 #
 ifndef
-GECKO_TRACE_EVENTS_H
+GECKO_TRACE_GENERATED_EVENTS_
+{
+{
+input_hash
+}
+}
+_H
 #
 define
-GECKO_TRACE_EVENTS_H
+GECKO_TRACE_GENERATED_EVENTS_
+{
+{
+input_hash
+}
+}
+_H
 #
 include
 "
@@ -454,7 +466,13 @@ __definition_site__
 Usage
 :
 *
-SpanEvent
+mozilla
+:
+:
+gecko_trace
+:
+:
+events
 :
 :
 {
@@ -499,22 +517,16 @@ attr_key
 }
 )
 {
-{
--
-"
-;
-"
-if
-loop
-.
-last
-}
-}
-{
 %
 endfor
 %
 }
+*
+.
+Emit
+(
+)
+;
 *
 {
 %
@@ -1452,7 +1464,13 @@ Example
 usage
 :
 *
-SpanEvent
+mozilla
+:
+:
+gecko_trace
+:
+:
+events
 :
 :
 SomeEvent
@@ -1469,6 +1487,11 @@ value1
 WithAttribute2
 (
 value2
+)
+*
+.
+Emit
+(
 )
 ;
 *
@@ -1608,4 +1631,10 @@ gecko_trace
 endif
 /
 /
-GECKO_TRACE_EVENTS_H
+GECKO_TRACE_GENERATED_EVENTS_
+{
+{
+input_hash
+}
+}
+_H
