Bug 1994847 - Add selected accent color tokens r=desktop-theme-reviewers,emilio,mstriemer
Differential Revision: https://phabricator.services.mozilla.com/D268957

UltraBlame original commit: 85e030072edddde092e20d5f26289210040f2598

--- a/browser/themes/shared/tab-list-tree.css
+++ b/browser/themes/shared/tab-list-tree.css
@@ -324,15 +324,15 @@ var
 (
 -
 -
-in
+text
 -
-content
+color
 -
-item
+accent
+-
+primary
 -
 selected
--
-text
 )
 ;
 stroke
@@ -341,11 +341,11 @@ var
 (
 -
 -
-in
+color
 -
-content
+accent
 -
-item
+primary
 -
 selected
 )
