Bug 1979949 - Deprecate `--in-content-item-selected*` in favor of `--*color-accent-primary-selected` design tokens r=desktop-theme-reviewers,credential-management-reviewers,omc-reviewers,mstriemer,mtigley,emcminn,emilio
- Changed references to `--in-content-item-selected*` to use `--*color-accent-primary-selected` counterparts
- Removed definitions of `--in-content-item-selected*` variables

Differential Revision: https://phabricator.services.mozilla.com/D268458

UltraBlame original commit: a8d0279b32c7f5f5dd0e3d89b616a07a6e2599a2

--- a/browser/components/aboutwelcome/content-src/aboutwelcome.scss
+++ b/browser/components/aboutwelcome/content-src/aboutwelcome.scss
@@ -987,11 +987,11 @@ var
 (
 -
 -
-in
+color
 -
-content
+accent
 -
-item
+primary
 -
 selected
 )
@@ -1031,11 +1031,11 @@ var
 (
 -
 -
-in
+color
 -
-content
+accent
 -
-item
+primary
 -
 selected
 )
@@ -1052,11 +1052,11 @@ var
 (
 -
 -
-in
+color
 -
-content
+accent
 -
-item
+primary
 -
 selected
 )
