--- a/browser/components/aboutwelcome/content/aboutwelcome.css
+++ b/browser/components/aboutwelcome/content/aboutwelcome.css
@@ -16430,11 +16430,11 @@ var
 (
 -
 -
-in
+color
 -
-content
+accent
 -
-item
+primary
 -
 selected
 )
@@ -16474,11 +16474,11 @@ var
 (
 -
 -
-in
+color
 -
-content
+accent
 -
-item
+primary
 -
 selected
 )
@@ -16495,11 +16495,11 @@ var
 (
 -
 -
-in
+color
 -
-content
+accent
 -
-item
+primary
 -
 selected
 )
