--- a/browser/themes/shared/preferences/preferences.css
+++ b/browser/themes/shared/preferences/preferences.css
@@ -2820,15 +2820,15 @@ var
 (
 -
 -
-in
+text
 -
-content
+color
 -
-item
+accent
+-
+primary
 -
 selected
--
-text
 )
 ;
 stroke
@@ -2837,11 +2837,11 @@ var
 (
 -
 -
-in
+color
 -
-content
+accent
 -
-item
+primary
 -
 selected
 )
