--- a/toolkit/components/aboutprocesses/content/aboutProcesses.css
+++ b/toolkit/components/aboutprocesses/content/aboutProcesses.css
@@ -1168,11 +1168,11 @@ var
 (
 -
 -
-in
+color
 -
-content
+accent
 -
-item
+primary
 -
 selected
 )
@@ -1183,15 +1183,15 @@ var
 (
 -
 -
-in
+text
 -
-content
+color
 -
-item
+accent
+-
+primary
 -
 selected
--
-text
 )
 ;
 }
