--- a/toolkit/themes/shared/in-content/common-shared.css
+++ b/toolkit/themes/shared/in-content/common-shared.css
@@ -286,54 +286,6 @@ in
 -
 content
 -
-item
--
-selected
-:
-var
-(
--
--
-button
--
-background
--
-color
--
-primary
-)
-;
--
--
-in
--
-content
--
-item
--
-selected
--
-text
-:
-var
-(
--
--
-button
--
-text
--
-color
--
-primary
-)
-;
--
--
-in
--
-content
--
 border
 -
 invalid
@@ -915,32 +867,6 @@ content
 item
 -
 hover
--
-text
-:
-SelectedItemText
-;
--
--
-in
--
-content
--
-item
--
-selected
-:
-SelectedItem
-;
--
--
-in
--
-content
--
-item
--
-selected
 -
 text
 :
@@ -3725,15 +3651,15 @@ var
 (
 -
 -
-in
+text
 -
-content
+color
 -
-item
+accent
+-
+primary
 -
 selected
--
-text
 )
 ;
 background
@@ -3744,11 +3670,11 @@ var
 (
 -
 -
-in
+color
 -
-content
+accent
 -
-item
+primary
 -
 selected
 )
@@ -6545,11 +6471,11 @@ var
 (
 -
 -
-in
+color
 -
-content
+accent
 -
-item
+primary
 -
 selected
 )
@@ -6560,15 +6486,15 @@ var
 (
 -
 -
-in
+text
 -
-content
+color
 -
-item
+accent
+-
+primary
 -
 selected
--
-text
 )
 ;
 }
@@ -6689,15 +6615,15 @@ var
 (
 -
 -
-in
+text
 -
-content
+color
 -
-item
+accent
+-
+primary
 -
 selected
--
-text
 )
 ;
 -
@@ -6714,15 +6640,15 @@ var
 (
 -
 -
-in
+text
 -
-content
+color
 -
-item
+accent
+-
+primary
 -
 selected
--
-text
 )
 ;
 -
@@ -6760,15 +6686,15 @@ var
 (
 -
 -
-in
+text
 -
-content
+color
 -
-item
+accent
+-
+primary
 -
 selected
--
-text
 )
 ;
 }
@@ -7698,15 +7624,15 @@ var
 (
 -
 -
-in
+text
 -
-content
+color
 -
-item
+accent
+-
+primary
 -
 selected
--
-text
 )
 ;
 }
