Bug 1971835 - Part 1: create an empty state component r=akulyk
Differential Revision: https://phabricator.services.mozilla.com/D268765

UltraBlame original commit: f3b1fd9340e90c7905aa988b541a40504fc507d0

--- a/browser/components/preferences/preferences.xhtml
+++ b/browser/components/preferences/preferences.xhtml
@@ -1412,6 +1412,39 @@ preferences
 /
 widgets
 /
+placeholder
+-
+message
+.
+mjs
+"
+>
+<
+/
+script
+>
+<
+script
+type
+=
+"
+module
+"
+src
+=
+"
+chrome
+:
+/
+/
+browser
+/
+content
+/
+preferences
+/
+widgets
+/
 nav
 -
 notice
