Bug 1991512 - Enable App Zygote Preloading on Runtime r=geckoview-reviewers,geckoview-api-reviewers,kaya,m_kato
Patch introduces a way to turn on app Zygote preloading on GeckoView.
Adds:
* --enable-isolated-zygote-process w/ MOZ_ANDROID_CONTENT_SERVICE_ISOLATED_WITH_ZYGOTE environment flag
  * For managing turning on/off elements in CI.
* GeckoRuntimeSettings API of `appZygoteProcessEnabled` and `getAppZygoteProcessEnabled` to manage runtime initialization of app Zygote process.
* Some utilities to determine what is a content process.

Differential Revision: https://phabricator.services.mozilla.com/D266901

UltraBlame original commit: 1b016710ddc287326545071eb8e1661ad0ff5a8f

--- a/mobile/android/geckoview/src/main/AndroidManifest_overlay.jinja
+++ b/mobile/android/geckoview/src/main/AndroidManifest_overlay.jinja
@@ -101,6 +101,23 @@ res
 /
 android
 "
+xmlns
+:
+tools
+=
+"
+http
+:
+/
+/
+schemas
+.
+android
+.
+com
+/
+tools
+"
 package
 =
 "
@@ -113,6 +130,28 @@ geckoview
 >
 <
 application
+android
+:
+zygotePreloadName
+=
+"
+org
+.
+mozilla
+.
+gecko
+.
+process
+.
+ZygotePreload
+"
+tools
+:
+targetApi
+=
+"
+q
+"
 >
 {
 %
@@ -241,6 +280,91 @@ process
 "
 :
 isolatedTab
+{
+{
+id
+}
+}
+"
+>
+<
+/
+service
+>
+<
+service
+android
+:
+name
+=
+"
+org
+.
+mozilla
+.
+gecko
+.
+process
+.
+GeckoChildProcessServices
+isolatedTabWithZygote
+{
+{
+id
+}
+}
+"
+android
+:
+enabled
+=
+"
+true
+"
+android
+:
+exported
+=
+"
+false
+"
+android
+:
+isolatedProcess
+=
+"
+true
+"
+{
+%
+if
+(
+id
+=
+=
+0
+)
+%
+}
+android
+:
+useAppZygote
+=
+"
+true
+"
+{
+%
+endif
+%
+}
+android
+:
+process
+=
+"
+:
+isolatedTabWithZygote
 {
 {
 id
