--- a/mobile/android/geckoview/src/main/java/org/mozilla/gecko/process/GeckoChildProcessServices.jinja
+++ b/mobile/android/geckoview/src/main/java/org/mozilla/gecko/process/GeckoChildProcessServices.jinja
@@ -98,6 +98,31 @@ gecko
 .
 process
 ;
+import
+androidx
+.
+annotation
+.
+Keep
+;
+/
+/
+R8
+fullMode
+can
+over
+-
+optimize
+this
+.
+Annotate
+with
+Keep
+to
+avoid
+crashes
+.
+Keep
 public
 class
 GeckoChildProcessServices
@@ -205,6 +230,20 @@ static
 final
 class
 isolatedTab
+{
+{
+id
+}
+}
+extends
+GeckoServiceChildProcess
+{
+}
+public
+static
+final
+class
+isolatedTabWithZygote
 {
 {
 id
