Bug 1989943 - Secret Setting to Enable App Zygote Process on Fenix r=kaya,android-reviewers,nalexander
Patch adds:
* A secret setting to Enable App Zygote Process on Fenix when SDK >= 29
* A Nimbus instrumentation to toggle the secret setting
* Telemetry to register pref changes

Differential Revision: https://phabricator.services.mozilla.com/D265600

UltraBlame original commit: 081a2dd13ba6d04785716b41e217ccb4a1bae3bb

--- a/mobile/android/fenix/app/src/main/res/values/preference_keys.xml
+++ b/mobile/android/fenix/app/src/main/res/values/preference_keys.xml
@@ -3349,6 +3349,42 @@ pref_key_customization_category_app_icon
 string
 >
 <
+string
+name
+=
+"
+pref_key_customization_category_toolbar_shortcut
+"
+translatable
+=
+"
+false
+"
+>
+pref_key_customization_category_toolbar_shortcut
+<
+/
+string
+>
+<
+string
+name
+=
+"
+pref_key_toolbar_shortcut
+"
+translatable
+=
+"
+false
+"
+>
+pref_key_toolbar_shortcut
+<
+/
+string
+>
+<
 !
 -
 -
@@ -6890,23 +6926,10 @@ string
 name
 =
 "
-pref_key_enable_simple_toolbar_customization
+pref_key_enable_toolbar_customization
 "
 >
-pref_key_enable_simple_toolbar_customization
-<
-/
-string
->
-<
-string
-name
-=
-"
-pref_key_enable_expanded_toolbar_customization
-"
->
-pref_key_enable_expanded_toolbar_customization
+pref_key_enable_toolbar_customization
 <
 /
 string
@@ -6943,6 +6966,24 @@ false
 "
 >
 pref_key_enable_isolated_process
+<
+/
+string
+>
+<
+string
+name
+=
+"
+pref_key_enable_app_zygote_process
+"
+translatable
+=
+"
+false
+"
+>
+pref_key_enable_app_zygote_process
 <
 /
 string
