--- a/mobile/android/fenix/app/src/main/res/values/static_strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values/static_strings.xml
@@ -1575,6 +1575,20 @@ name
 "
 preferences_debug_settings_simple_toolbar_customization
 "
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+145
+"
 >
 Enable
 simple
@@ -1605,11 +1619,53 @@ name
 "
 preferences_debug_settings_expanded_toolbar_customization
 "
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+145
+"
 >
 Enable
 expanded
 toolbar
 customization
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+for
+enabling
+the
+redesigned
+toolbar
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_debug_settings_toolbar_customization
+"
+>
+Enable
+Toolbar
+Customization
 <
 /
 string
@@ -1654,6 +1710,54 @@ needs
 the
 Composable
 Toolbar
+feature
+enabled
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+for
+a
+longer
+description
+of
+the
+redesigned
+toolbar
+depending
+on
+the
+redesigned
+toolbar
+options
+feature
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_debug_settings_toolbar_customization_summary
+"
+translatable
+=
+"
+false
+"
+>
+This
+needs
+the
+Redesigned
+Toolbar
+Options
 feature
 enabled
 <
@@ -2210,6 +2314,33 @@ Enable
 Isolated
 Content
 Process
+(
+requires
+restart
+)
+<
+/
+string
+>
+<
+string
+name
+=
+"
+preferences_debug_settings_app_zygote
+"
+translatable
+=
+"
+false
+"
+>
+Enable
+Isolated
+Processes
+with
+Zygote
+Preloading
 (
 requires
 restart
@@ -4164,92 +4295,6 @@ string
 !
 -
 -
-Subtitle
-warning
-text
-for
-crash
-button
--
--
->
-<
-string
-name
-=
-"
-crash_debug_startup_crash_warning
-"
->
-This
-will
-set
-the
-flag
-that
-a
-startup
-crash
-was
-detected
-and
-crash
-the
-app
-to
-enter
-the
-startup
-crash
-flow
-on
-next
-startup
-.
-<
-/
-string
->
-<
-!
--
--
-Button
-text
-to
-set
-app
-to
-crash
-during
-next
-startup
--
--
->
-<
-string
-name
-=
-"
-crash_debug_crash_on_next_startup
-"
->
-Set
-startup
-crash
-flag
-and
-crash
-app
-<
-/
-string
->
-<
-!
--
--
 Timer
 text
 for
@@ -4278,6 +4323,78 @@ period
 :
 %
 s
+<
+/
+string
+>
+<
+!
+-
+-
+Button
+text
+to
+show
+startup
+crash
+screen
+-
+-
+>
+<
+string
+name
+=
+"
+crash_debug_show_startup_crash_screen
+"
+>
+Show
+startup
+crash
+screen
+<
+/
+string
+>
+<
+!
+-
+-
+Subtitle
+warning
+text
+for
+crash
+button
+-
+-
+>
+<
+string
+name
+=
+"
+crash_debug_startup_crash_warning
+"
+>
+This
+will
+start
+the
+startup
+crash
+activity
+in
+a
+new
+process
+and
+terminate
+the
+current
+process
+.
 <
 /
 string
