Bug 1979713 - Show Not Secure label in unified trust urlbar icon. r=fluent-reviewers,desktop-theme-reviewers,urlbar-reviewers,bolsson,dao
Differential Revision: https://phabricator.services.mozilla.com/D268047

UltraBlame original commit: 2abbe05763667a065011c448e3c5770a1c5c9bf8

--- a/browser/themes/shared/identity-block/identity-block.css
+++ b/browser/themes/shared/identity-block/identity-block.css
@@ -2547,8 +2547,12 @@ svg
 )
 ;
 &
+:
+where
+(
 .
 insecure
+)
 {
 list
 -
@@ -2573,6 +2577,36 @@ icon
 insecure
 .
 svg
+)
+;
+background
+-
+color
+:
+var
+(
+-
+-
+urlbar
+-
+box
+-
+bgcolor
+)
+;
+color
+:
+var
+(
+-
+-
+urlbar
+-
+box
+-
+text
+-
+color
 )
 ;
 }
@@ -2693,5 +2727,28 @@ display
 flex
 ;
 }
+}
+#
+trust
+-
+icon
+-
+container
+:
+not
+(
+.
+insecure
+)
+>
+#
+trust
+-
+label
+{
+display
+:
+none
+;
 }
 }
