Bug 1986805 - Support the common config properties for the setting-group element r=mstriemer
Differential Revision: https://phabricator.services.mozilla.com/D267053

UltraBlame original commit: 3778c50a9af32d9e20fa8ee7a8169d9e2cec3275

--- a/browser/components/preferences/tests/chrome/test_setting_control_checkbox.html
+++ b/browser/components/preferences/tests/chrome/test_setting_control_checkbox.html
@@ -178,6 +178,22 @@ script
 >
 <
 script
+src
+=
+"
+.
+/
+head
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
 type
 =
 "
@@ -1254,6 +1270,86 @@ receives
 the
 supportPage
 "
+)
+;
+}
+)
+;
+add_task
+(
+async
+function
+testCommonControlProperties
+(
+)
+{
+const
+SETTING
+=
+"
+setting
+-
+common
+-
+props
+"
+;
+Preferences
+.
+addSetting
+(
+{
+id
+:
+SETTING
+get
+:
+(
+)
+=
+>
+true
+}
+)
+;
+await
+testCommonSettingControlProperties
+(
+async
+commonConfig
+=
+>
+{
+const
+control
+=
+await
+renderTemplate
+(
+{
+id
+:
+SETTING
+.
+.
+.
+commonConfig
+}
+)
+;
+return
+control
+.
+querySelector
+(
+"
+moz
+-
+checkbox
+"
+)
+;
+}
 )
 ;
 }
