--- a/browser/components/preferences/tests/chrome/test_setting_group.html
+++ b/browser/components/preferences/tests/chrome/test_setting_group.html
@@ -178,6 +178,22 @@ script
 >
 <
 script
+src
+=
+"
+.
+/
+head
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
 type
 =
 "
@@ -1364,6 +1380,92 @@ controls
 are
 hidden
 "
+)
+;
+}
+)
+;
+add_task
+(
+async
+function
+testCommonControlProperties
+(
+)
+{
+const
+SETTING
+=
+"
+setting
+-
+control
+-
+support
+-
+link
+"
+;
+Preferences
+.
+addSetting
+(
+{
+id
+:
+SETTING
+get
+:
+(
+)
+=
+>
+true
+}
+)
+;
+await
+testCommonSettingControlProperties
+(
+async
+commonConfig
+=
+>
+{
+const
+control
+=
+await
+renderTemplate
+(
+{
+.
+.
+.
+commonConfig
+id
+:
+SETTING
+items
+:
+[
+]
+}
+)
+;
+return
+control
+.
+querySelector
+(
+"
+moz
+-
+fieldset
+"
+)
+;
+}
 )
 ;
 }
