Bug 1989459 - Create SettingsSearchFragment, SettingsSearchStore and other Store components for SettingsSearch r=android-reviewers,delphine,petru,007
Differential Revision: https://phabricator.services.mozilla.com/D265891

UltraBlame original commit: e9f27391829b2b4bd346a6993d4b74ac53b953ce

--- a/mobile/android/fenix/app/src/main/res/navigation/nav_graph.xml
+++ b/mobile/android/fenix/app/src/main/res/navigation/nav_graph.xml
@@ -4236,6 +4236,74 @@ id
 +
 id
 /
+action_settingsFragment_to_settingsSearchFragment
+"
+app
+:
+destination
+=
+"
+id
+/
+settingsSearchFragment
+"
+app
+:
+enterAnim
+=
+"
+anim
+/
+slide_in_right
+"
+app
+:
+exitAnim
+=
+"
+anim
+/
+slide_out_left
+"
+app
+:
+popEnterAnim
+=
+"
+anim
+/
+slide_in_left
+"
+app
+:
+popExitAnim
+=
+"
+anim
+/
+slide_out_right
+"
+app
+:
+popUpTo
+=
+"
+id
+/
+settingsFragment
+"
+/
+>
+<
+action
+android
+:
+id
+=
+"
++
+id
+/
 action_settingsFragment_to_dataChoicesFragment
 "
 app
@@ -6131,6 +6199,46 @@ ProfilerStopDialogFragment
 <
 /
 dialog
+>
+<
+fragment
+android
+:
+id
+=
+"
++
+id
+/
+settingsSearchFragment
+"
+android
+:
+name
+=
+"
+org
+.
+mozilla
+.
+fenix
+.
+settings
+.
+settingssearch
+.
+SettingsSearchFragment
+"
+android
+:
+label
+=
+"
+string
+/
+settings_search_title
+"
+/
 >
 <
 fragment
