--- a/mobile/android/fenix/app/src/main/res/values/static_strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values/static_strings.xml
@@ -4400,6 +4400,188 @@ process
 string
 >
 <
+!
+-
+-
+Settings
+Search
+Strings
+-
+-
+>
+<
+!
+-
+-
+Title
+of
+Settings
+Search
+-
+-
+>
+<
+string
+name
+=
+"
+settings_search_title
+"
+>
+Settings
+Search
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+"
+Clear
+search
+field
+button
+for
+settings
+search
+"
+-
+-
+>
+<
+string
+name
+=
+"
+content_description_settings_search_clear_search
+"
+>
+Clear
+Search
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+:
+"
+Navigate
+back
+button
+for
+settings
+search
+"
+-
+-
+>
+<
+string
+name
+=
+"
+content_description_settings_search_navigate_back
+"
+>
+Navigate
+Back
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+displayed
+when
+the
+search
+field
+in
+the
+Settings
+Search
+screen
+is
+empty
+-
+-
+>
+<
+string
+name
+=
+"
+settings_search_empty_query_placeholder
+"
+>
+Search
+for
+settings
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+when
+error
+happens
+with
+Settings
+Search
+-
+-
+>
+<
+string
+name
+=
+"
+settings_search_error_message
+"
+>
+Error
+occurred
+.
+<
+/
+string
+>
+<
 /
 resources
 >
