Bug 1983124 - Stack dragged tabs when dragging multiple tabs r=tabbrowser-reviewers,desktop-theme-reviewers,sclements,sthompson
Differential Revision: https://phabricator.services.mozilla.com/D263949

UltraBlame original commit: 834e09bdb432ad0fca626374189402643cf5c3c0

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -559,7 +559,7 @@ clip
 -
 margin
 :
-2px
+4px
 ;
 -
 -
@@ -2496,6 +2496,66 @@ scroll
 buttons
 *
 /
+/
+*
+stylelint
+-
+disable
+-
+next
+-
+line
+media
+-
+query
+-
+no
+-
+invalid
+*
+/
+media
+-
+moz
+-
+pref
+(
+"
+browser
+.
+tabs
+.
+dragDrop
+.
+multiselectStacking
+"
+)
+{
+&
+[
+multiselected
+]
+:
+not
+(
+[
+small
+-
+stack
+]
+[
+big
+-
+stack
+]
+)
+{
+visibility
+:
+hidden
+;
+}
+}
 }
 &
 :
@@ -2628,6 +2688,28 @@ together
 [
 multiselected
 ]
+{
+z
+-
+index
+:
+3
+;
+&
+[
+visually
+-
+selected
+]
+{
+z
+-
+index
+:
+4
+;
+}
+&
 :
 not
 (
@@ -2642,6 +2724,7 @@ index
 :
 2
 ;
+}
 }
 /
 *
@@ -8141,6 +8224,908 @@ tabbrowser
 -
 tabs
 [
+orient
+=
+"
+vertical
+"
+]
+:
+not
+(
+[
+movingtab
+-
+group
+]
+)
+&
+{
+.
+tabbrowser
+-
+tab
+[
+small
+-
+stack
+]
+>
+.
+tab
+-
+stack
+>
+&
+{
+box
+-
+shadow
+:
+0
+5px
+0
+-
+3px
+var
+(
+-
+-
+tab
+-
+selected
+-
+bgcolor
+)
+0
+3px
+var
+(
+-
+-
+focus
+-
+outline
+-
+color
+)
+;
+}
+.
+tabbrowser
+-
+tab
+[
+big
+-
+stack
+]
+>
+.
+tab
+-
+stack
+>
+&
+{
+box
+-
+shadow
+:
+0
+5px
+0
+-
+3px
+var
+(
+-
+-
+tab
+-
+selected
+-
+bgcolor
+)
+0
+3px
+var
+(
+-
+-
+focus
+-
+outline
+-
+color
+)
+0
+8px
+0
+-
+3px
+var
+(
+-
+-
+tab
+-
+selected
+-
+bgcolor
+)
+0
+6px
+var
+(
+-
+-
+focus
+-
+outline
+-
+color
+)
+;
+}
+}
+#
+tabbrowser
+-
+tabs
+[
+orient
+=
+"
+horizontal
+"
+]
+:
+not
+(
+[
+movingtab
+-
+group
+]
+)
+&
+{
+.
+tabbrowser
+-
+tab
+[
+small
+-
+stack
+]
+>
+.
+tab
+-
+stack
+>
+&
+{
+box
+-
+shadow
+:
+5px
+0
+0
+-
+3px
+var
+(
+-
+-
+tab
+-
+selected
+-
+bgcolor
+)
+3px
+0
+var
+(
+-
+-
+focus
+-
+outline
+-
+color
+)
+;
+}
+.
+tabbrowser
+-
+tab
+[
+big
+-
+stack
+]
+>
+.
+tab
+-
+stack
+>
+&
+{
+box
+-
+shadow
+:
+5px
+0
+0
+-
+3px
+var
+(
+-
+-
+tab
+-
+selected
+-
+bgcolor
+)
+3px
+0
+var
+(
+-
+-
+focus
+-
+outline
+-
+color
+)
+8px
+0
+0
+-
+3px
+var
+(
+-
+-
+tab
+-
+selected
+-
+bgcolor
+)
+6px
+0
+var
+(
+-
+-
+focus
+-
+outline
+-
+color
+)
+;
+}
+&
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+.
+tabbrowser
+-
+tab
+[
+small
+-
+stack
+]
+>
+.
+tab
+-
+stack
+>
+&
+{
+box
+-
+shadow
+:
+-
+5px
+0
+0
+-
+3px
+var
+(
+-
+-
+tab
+-
+selected
+-
+bgcolor
+)
+-
+3px
+0
+var
+(
+-
+-
+focus
+-
+outline
+-
+color
+)
+;
+}
+.
+tabbrowser
+-
+tab
+[
+big
+-
+stack
+]
+>
+.
+tab
+-
+stack
+>
+&
+{
+box
+-
+shadow
+:
+-
+5px
+0
+0
+-
+3px
+var
+(
+-
+-
+tab
+-
+selected
+-
+bgcolor
+)
+-
+3px
+0
+var
+(
+-
+-
+focus
+-
+outline
+-
+color
+)
+-
+8px
+0
+0
+-
+3px
+var
+(
+-
+-
+tab
+-
+selected
+-
+bgcolor
+)
+-
+6px
+0
+var
+(
+-
+-
+focus
+-
+outline
+-
+color
+)
+;
+}
+}
+}
+#
+tabbrowser
+-
+tabs
+[
+orient
+=
+"
+vertical
+"
+]
+[
+movingtab
+-
+group
+]
+&
+{
+.
+tabbrowser
+-
+tab
+[
+small
+-
+stack
+]
+>
+.
+tab
+-
+stack
+>
+&
+{
+box
+-
+shadow
+:
+0
+5px
+0
+-
+3px
+var
+(
+-
+-
+tab
+-
+selected
+-
+bgcolor
+)
+0
+3px
+var
+(
+-
+-
+dragover
+-
+tab
+-
+group
+-
+color
+)
+;
+}
+.
+tabbrowser
+-
+tab
+[
+big
+-
+stack
+]
+>
+.
+tab
+-
+stack
+>
+&
+{
+box
+-
+shadow
+:
+0
+5px
+0
+-
+3px
+var
+(
+-
+-
+tab
+-
+selected
+-
+bgcolor
+)
+0
+3px
+var
+(
+-
+-
+dragover
+-
+tab
+-
+group
+-
+color
+)
+0
+8px
+0
+-
+3px
+var
+(
+-
+-
+tab
+-
+selected
+-
+bgcolor
+)
+0
+6px
+var
+(
+-
+-
+dragover
+-
+tab
+-
+group
+-
+color
+)
+;
+}
+}
+#
+tabbrowser
+-
+tabs
+[
+orient
+=
+"
+horizontal
+"
+]
+[
+movingtab
+-
+group
+]
+&
+{
+.
+tabbrowser
+-
+tab
+[
+small
+-
+stack
+]
+>
+.
+tab
+-
+stack
+>
+&
+{
+box
+-
+shadow
+:
+5px
+0
+0
+-
+3px
+var
+(
+-
+-
+tab
+-
+selected
+-
+bgcolor
+)
+3px
+0
+var
+(
+-
+-
+dragover
+-
+tab
+-
+group
+-
+color
+)
+;
+}
+.
+tabbrowser
+-
+tab
+[
+big
+-
+stack
+]
+>
+.
+tab
+-
+stack
+>
+&
+{
+box
+-
+shadow
+:
+5px
+0
+0
+-
+3px
+var
+(
+-
+-
+tab
+-
+selected
+-
+bgcolor
+)
+3px
+0
+var
+(
+-
+-
+dragover
+-
+tab
+-
+group
+-
+color
+)
+8px
+0
+0
+-
+3px
+var
+(
+-
+-
+tab
+-
+selected
+-
+bgcolor
+)
+6px
+0
+var
+(
+-
+-
+dragover
+-
+tab
+-
+group
+-
+color
+)
+;
+}
+&
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+.
+tabbrowser
+-
+tab
+[
+small
+-
+stack
+]
+>
+.
+tab
+-
+stack
+>
+&
+{
+box
+-
+shadow
+:
+-
+5px
+0
+0
+-
+3px
+var
+(
+-
+-
+tab
+-
+selected
+-
+bgcolor
+)
+-
+3px
+0
+var
+(
+-
+-
+dragover
+-
+tab
+-
+group
+-
+color
+)
+;
+}
+.
+tabbrowser
+-
+tab
+[
+big
+-
+stack
+]
+>
+.
+tab
+-
+stack
+>
+&
+{
+box
+-
+shadow
+:
+-
+5px
+0
+0
+-
+3px
+var
+(
+-
+-
+tab
+-
+selected
+-
+bgcolor
+)
+-
+3px
+0
+var
+(
+-
+-
+dragover
+-
+tab
+-
+group
+-
+color
+)
+-
+8px
+0
+0
+-
+3px
+var
+(
+-
+-
+tab
+-
+selected
+-
+bgcolor
+)
+-
+6px
+0
+var
+(
+-
+-
+dragover
+-
+tab
+-
+group
+-
+color
+)
+;
+}
+}
+}
+#
+tabbrowser
+-
+tabs
+[
 movingtab
 ]
 &
@@ -9451,6 +10436,191 @@ Split
 View
 *
 /
+tab
+-
+group
+>
+tab
+-
+split
+-
+view
+-
+wrapper
+{
+#
+tabbrowser
+-
+tabs
+[
+orient
+=
+"
+vertical
+"
+]
+&
+{
+margin
+-
+inline
+-
+start
+:
+var
+(
+-
+-
+space
+-
+xxsmall
+)
+;
+margin
+-
+block
+:
+calc
+(
+var
+(
+-
+-
+space
+-
+xsmall
+)
+*
+-
+1
+)
+;
+.
+tabbrowser
+-
+tab
+:
+last
+-
+child
+{
+.
+tab
+-
+group
+-
+line
+{
+display
+:
+none
+;
+}
+}
+}
+container
+vertical
+-
+tabs
+-
+container
+(
+max
+-
+width
+:
+210px
+)
+{
+#
+tabbrowser
+-
+tabs
+[
+orient
+=
+"
+vertical
+"
+]
+&
+{
+margin
+-
+inline
+-
+start
+:
+0
+;
+.
+tabbrowser
+-
+tab
+:
+last
+-
+child
+{
+.
+tab
+-
+group
+-
+line
+{
+display
+:
+flex
+;
+}
+}
+}
+}
+#
+tabbrowser
+-
+tabs
+[
+orient
+=
+"
+horizontal
+"
+]
+&
+>
+.
+tab
+-
+split
+-
+view
+-
+container
+{
+margin
+-
+inline
+:
+0
+;
+padding
+-
+block
+-
+end
+:
+0
+;
+padding
+-
+inline
+:
+0
+;
+}
+}
 #
 tabbrowser
 -
@@ -10960,6 +12130,36 @@ not
 (
 [
 visuallyselected
+]
+)
+#
+tabbrowser
+-
+tabs
+[
+orient
+=
+"
+vertical
+"
+]
+&
+[
+collapsed
+]
+>
+tab
+-
+split
+-
+view
+-
+wrapper
+:
+not
+(
+[
+hasactivetab
 ]
 )
 {
