Bug 1991693 - Fix images from New Tab Story Cards disappear on hover with the Refined Cards Layout option disabled on High Contrast Mode. r=home-newtab-reviewers,thecount
Differential Revision: https://phabricator.services.mozilla.com/D269449

UltraBlame original commit: b715c9e6897b1e5fceb25b38c45a74ad40ac8dd0

--- a/browser/extensions/newtab/css/activity-stream.css
+++ b/browser/extensions/newtab/css/activity-stream.css
@@ -52383,6 +52383,40 @@ card
 -
 stp
 -
+button
+-
+hover
+-
+background
+{
+background
+:
+transparent
+;
+}
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+1
+-
+medium
+.
+card
+-
+stp
+-
 thumbs
 -
 buttons
@@ -57060,6 +57094,40 @@ card
 -
 stp
 -
+button
+-
+hover
+-
+background
+{
+background
+:
+transparent
+;
+}
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+2
+-
+medium
+.
+card
+-
+stp
+-
 thumbs
 -
 buttons
@@ -61850,6 +61918,40 @@ card
 -
 stp
 -
+button
+-
+hover
+-
+background
+{
+background
+:
+transparent
+;
+}
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+3
+-
+medium
+.
+card
+-
+stp
+-
 thumbs
 -
 buttons
@@ -66604,6 +66706,40 @@ space
 -
 small
 )
+;
+}
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+4
+-
+medium
+.
+card
+-
+stp
+-
+button
+-
+hover
+-
+background
+{
+background
+:
+transparent
 ;
 }
 .
