Bug 1981577 - Fix background hover style on trustpanel moz-buttons. r=desktop-theme-reviewers,mstriemer
Differential Revision: https://phabricator.services.mozilla.com/D269143

UltraBlame original commit: 2db5641e60773a54ad9921720d9e23e4fb714b59

--- a/browser/themes/shared/controlcenter/panel.css
+++ b/browser/themes/shared/controlcenter/panel.css
@@ -7931,6 +7931,36 @@ inline
 -
 start
 ;
+-
+-
+button
+-
+border
+-
+radius
+:
+var
+(
+-
+-
+border
+-
+radius
+-
+small
+)
+;
+-
+-
+focus
+-
+outline
+-
+offset
+:
+-
+2px
+;
 margin
 :
 var
@@ -7949,6 +7979,14 @@ moz
 -
 available
 ;
+&
+:
+:
+part
+(
+button
+)
+{
 -
 moz
 -
@@ -7994,8 +8032,53 @@ background
 position
 :
 right
+var
+(
+-
+-
+space
+-
+large
+)
 center
 ;
+padding
+-
+inline
+-
+end
+:
+calc
+(
+var
+(
+-
+-
+space
+-
+small
+)
++
+var
+(
+-
+-
+icon
+-
+size
+)
++
+var
+(
+-
+-
+space
+-
+large
+)
+)
+;
+}
 &
 :
 -
@@ -8006,6 +8089,12 @@ locale
 dir
 (
 rtl
+)
+:
+:
+part
+(
+button
 )
 {
 background
@@ -8038,6 +8127,14 @@ position
 x
 :
 left
+var
+(
+-
+-
+space
+-
+large
+)
 ;
 }
 }
