Bug 1995436 - Expand Publisher name for New Tab medium refined story cards. r=home-newtab-reviewers,reemhamz
Differential Revision: https://phabricator.services.mozilla.com/D269304

UltraBlame original commit: b8baf10861d7995686b8d1f3741ab3d770b1bb3d

--- a/browser/extensions/newtab/content-src/components/DiscoveryStreamComponents/CardSections/_CardSections.scss
+++ b/browser/extensions/newtab/content-src/components/DiscoveryStreamComponents/CardSections/_CardSections.scss
@@ -365,7 +365,7 @@ active
 :
 focus
 -
-visible
+within
 &
 .
 active
@@ -1048,7 +1048,19 @@ max
 -
 width
 :
-175px
+245px
+;
+}
+.
+source
+-
+wrapper
+.
+source
+{
+width
+:
+217px
 ;
 }
 }
@@ -1188,6 +1200,22 @@ background
 transparent
 ;
 }
+.
+card
+-
+stp
+-
+thumbs
+-
+buttons
+-
+wrapper
+{
+visibility
+:
+hidden
+;
+}
 &
 :
 hover
@@ -1198,14 +1226,42 @@ active
 :
 focus
 -
-visible
+within
 &
 .
 active
 {
 .
+card
+-
+stp
+-
+thumbs
+-
+buttons
+-
+wrapper
+{
+visibility
+:
+visible
+;
+}
+.
 meta
 {
+.
+source
+-
+wrapper
+{
+max
+-
+width
+:
+175px
+;
+}
 .
 source
 -
@@ -1216,6 +1272,10 @@ source
 display
 :
 block
+;
+width
+:
+unset
 ;
 }
 }
