--- a/browser/extensions/newtab/css/activity-stream.css
+++ b/browser/extensions/newtab/css/activity-stream.css
@@ -50635,7 +50635,7 @@ cards
 :
 focus
 -
-visible
+within
 .
 card
 -
@@ -50775,7 +50775,7 @@ cards
 :
 focus
 -
-visible
+within
 .
 meta
 .
@@ -51927,7 +51927,49 @@ max
 -
 width
 :
-175px
+245px
+;
+}
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+1
+-
+medium
+.
+refined
+-
+cards
+.
+meta
+.
+sections
+-
+card
+-
+footer
+.
+source
+-
+wrapper
+.
+source
+{
+width
+:
+217px
 ;
 }
 .
@@ -52201,6 +52243,318 @@ medium
 refined
 -
 cards
+.
+card
+-
+stp
+-
+thumbs
+-
+buttons
+-
+wrapper
+{
+visibility
+:
+hidden
+;
+}
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+1
+-
+medium
+.
+refined
+-
+cards
+:
+hover
+.
+card
+-
+stp
+-
+thumbs
+-
+buttons
+-
+wrapper
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+1
+-
+medium
+.
+refined
+-
+cards
+:
+active
+.
+card
+-
+stp
+-
+thumbs
+-
+buttons
+-
+wrapper
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+1
+-
+medium
+.
+refined
+-
+cards
+:
+focus
+-
+within
+.
+card
+-
+stp
+-
+thumbs
+-
+buttons
+-
+wrapper
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+1
+-
+medium
+.
+refined
+-
+cards
+.
+active
+.
+card
+-
+stp
+-
+thumbs
+-
+buttons
+-
+wrapper
+{
+visibility
+:
+visible
+;
+}
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+1
+-
+medium
+.
+refined
+-
+cards
+:
+hover
+.
+meta
+.
+source
+-
+wrapper
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+1
+-
+medium
+.
+refined
+-
+cards
+:
+active
+.
+meta
+.
+source
+-
+wrapper
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+1
+-
+medium
+.
+refined
+-
+cards
+:
+focus
+-
+within
+.
+meta
+.
+source
+-
+wrapper
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+1
+-
+medium
+.
+refined
+-
+cards
+.
+active
+.
+meta
+.
+source
+-
+wrapper
+{
+max
+-
+width
+:
+175px
+;
+}
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+1
+-
+medium
+.
+refined
+-
+cards
 :
 hover
 .
@@ -52268,7 +52622,7 @@ cards
 :
 focus
 -
-visible
+within
 .
 meta
 .
@@ -52313,6 +52667,10 @@ source
 display
 :
 block
+;
+width
+:
+unset
 ;
 }
 .
@@ -55346,7 +55704,7 @@ cards
 :
 focus
 -
-visible
+within
 .
 card
 -
@@ -55486,7 +55844,7 @@ cards
 :
 focus
 -
-visible
+within
 .
 meta
 .
@@ -56638,7 +56996,49 @@ max
 -
 width
 :
-175px
+245px
+;
+}
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+2
+-
+medium
+.
+refined
+-
+cards
+.
+meta
+.
+sections
+-
+card
+-
+footer
+.
+source
+-
+wrapper
+.
+source
+{
+width
+:
+217px
 ;
 }
 .
@@ -56912,6 +57312,318 @@ medium
 refined
 -
 cards
+.
+card
+-
+stp
+-
+thumbs
+-
+buttons
+-
+wrapper
+{
+visibility
+:
+hidden
+;
+}
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+2
+-
+medium
+.
+refined
+-
+cards
+:
+hover
+.
+card
+-
+stp
+-
+thumbs
+-
+buttons
+-
+wrapper
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+2
+-
+medium
+.
+refined
+-
+cards
+:
+active
+.
+card
+-
+stp
+-
+thumbs
+-
+buttons
+-
+wrapper
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+2
+-
+medium
+.
+refined
+-
+cards
+:
+focus
+-
+within
+.
+card
+-
+stp
+-
+thumbs
+-
+buttons
+-
+wrapper
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+2
+-
+medium
+.
+refined
+-
+cards
+.
+active
+.
+card
+-
+stp
+-
+thumbs
+-
+buttons
+-
+wrapper
+{
+visibility
+:
+visible
+;
+}
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+2
+-
+medium
+.
+refined
+-
+cards
+:
+hover
+.
+meta
+.
+source
+-
+wrapper
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+2
+-
+medium
+.
+refined
+-
+cards
+:
+active
+.
+meta
+.
+source
+-
+wrapper
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+2
+-
+medium
+.
+refined
+-
+cards
+:
+focus
+-
+within
+.
+meta
+.
+source
+-
+wrapper
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+2
+-
+medium
+.
+refined
+-
+cards
+.
+active
+.
+meta
+.
+source
+-
+wrapper
+{
+max
+-
+width
+:
+175px
+;
+}
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+2
+-
+medium
+.
+refined
+-
+cards
 :
 hover
 .
@@ -56979,7 +57691,7 @@ cards
 :
 focus
 -
-visible
+within
 .
 meta
 .
@@ -57024,6 +57736,10 @@ source
 display
 :
 block
+;
+width
+:
+unset
 ;
 }
 .
@@ -60170,7 +60886,7 @@ cards
 :
 focus
 -
-visible
+within
 .
 card
 -
@@ -60310,7 +61026,7 @@ cards
 :
 focus
 -
-visible
+within
 .
 meta
 .
@@ -61462,7 +62178,49 @@ max
 -
 width
 :
-175px
+245px
+;
+}
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+3
+-
+medium
+.
+refined
+-
+cards
+.
+meta
+.
+sections
+-
+card
+-
+footer
+.
+source
+-
+wrapper
+.
+source
+{
+width
+:
+217px
 ;
 }
 .
@@ -61736,6 +62494,318 @@ medium
 refined
 -
 cards
+.
+card
+-
+stp
+-
+thumbs
+-
+buttons
+-
+wrapper
+{
+visibility
+:
+hidden
+;
+}
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+3
+-
+medium
+.
+refined
+-
+cards
+:
+hover
+.
+card
+-
+stp
+-
+thumbs
+-
+buttons
+-
+wrapper
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+3
+-
+medium
+.
+refined
+-
+cards
+:
+active
+.
+card
+-
+stp
+-
+thumbs
+-
+buttons
+-
+wrapper
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+3
+-
+medium
+.
+refined
+-
+cards
+:
+focus
+-
+within
+.
+card
+-
+stp
+-
+thumbs
+-
+buttons
+-
+wrapper
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+3
+-
+medium
+.
+refined
+-
+cards
+.
+active
+.
+card
+-
+stp
+-
+thumbs
+-
+buttons
+-
+wrapper
+{
+visibility
+:
+visible
+;
+}
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+3
+-
+medium
+.
+refined
+-
+cards
+:
+hover
+.
+meta
+.
+source
+-
+wrapper
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+3
+-
+medium
+.
+refined
+-
+cards
+:
+active
+.
+meta
+.
+source
+-
+wrapper
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+3
+-
+medium
+.
+refined
+-
+cards
+:
+focus
+-
+within
+.
+meta
+.
+source
+-
+wrapper
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+3
+-
+medium
+.
+refined
+-
+cards
+.
+active
+.
+meta
+.
+source
+-
+wrapper
+{
+max
+-
+width
+:
+175px
+;
+}
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+3
+-
+medium
+.
+refined
+-
+cards
 :
 hover
 .
@@ -61803,7 +62873,7 @@ cards
 :
 focus
 -
-visible
+within
 .
 meta
 .
@@ -61848,6 +62918,10 @@ source
 display
 :
 block
+;
+width
+:
+unset
 ;
 }
 .
@@ -64983,7 +66057,7 @@ cards
 :
 focus
 -
-visible
+within
 .
 card
 -
@@ -65123,7 +66197,7 @@ cards
 :
 focus
 -
-visible
+within
 .
 meta
 .
@@ -66275,7 +67349,49 @@ max
 -
 width
 :
-175px
+245px
+;
+}
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+4
+-
+medium
+.
+refined
+-
+cards
+.
+meta
+.
+sections
+-
+card
+-
+footer
+.
+source
+-
+wrapper
+.
+source
+{
+width
+:
+217px
 ;
 }
 .
@@ -66549,6 +67665,318 @@ medium
 refined
 -
 cards
+.
+card
+-
+stp
+-
+thumbs
+-
+buttons
+-
+wrapper
+{
+visibility
+:
+hidden
+;
+}
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+4
+-
+medium
+.
+refined
+-
+cards
+:
+hover
+.
+card
+-
+stp
+-
+thumbs
+-
+buttons
+-
+wrapper
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+4
+-
+medium
+.
+refined
+-
+cards
+:
+active
+.
+card
+-
+stp
+-
+thumbs
+-
+buttons
+-
+wrapper
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+4
+-
+medium
+.
+refined
+-
+cards
+:
+focus
+-
+within
+.
+card
+-
+stp
+-
+thumbs
+-
+buttons
+-
+wrapper
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+4
+-
+medium
+.
+refined
+-
+cards
+.
+active
+.
+card
+-
+stp
+-
+thumbs
+-
+buttons
+-
+wrapper
+{
+visibility
+:
+visible
+;
+}
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+4
+-
+medium
+.
+refined
+-
+cards
+:
+hover
+.
+meta
+.
+source
+-
+wrapper
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+4
+-
+medium
+.
+refined
+-
+cards
+:
+active
+.
+meta
+.
+source
+-
+wrapper
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+4
+-
+medium
+.
+refined
+-
+cards
+:
+focus
+-
+within
+.
+meta
+.
+source
+-
+wrapper
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+4
+-
+medium
+.
+refined
+-
+cards
+.
+active
+.
+meta
+.
+source
+-
+wrapper
+{
+max
+-
+width
+:
+175px
+;
+}
+.
+ds
+-
+section
+-
+grid
+.
+ds
+-
+card
+-
+grid
+.
+col
+-
+4
+-
+medium
+.
+refined
+-
+cards
 :
 hover
 .
@@ -66616,7 +68044,7 @@ cards
 :
 focus
 -
-visible
+within
 .
 meta
 .
@@ -66661,6 +68089,10 @@ source
 display
 :
 block
+;
+width
+:
+unset
 ;
 }
 .
